--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -1,8 +1,7 @@
-<div style="padding:10px;">
+<div class="demo">
 
   <cloukit-story title="Basic Usage" story="story-00-basic">
-    <story-00-basic></story-00-basic>
+    <cloukit-story-00-basic></cloukit-story-00-basic>
   </cloukit-story>
-
 
 </div>
